# CG2-CodeForArt-2016

./: CG2_Demo.sln  CMakeLists.txt  ReadMe.md  ReadMe.txt  build.bat
Filtering/: CMakeLists.txt  Filtering.vcxproj  Filtering.vcxproj.admin.nvuser  Filtering.vcxproj.filters
Filtering/cuda/: kernel.cu  utils.cuh
Filtering/include/: Color.h  demoFilters.h  filtering.h  image.h
Filtering/include/math/: affinespace.h  bbox.h  col3.h  col4.h  color.h  constants.h  linearspace3.h  math.h  obbox.h  quaternion.h  vec2.h  vec3.h  vec3ba.h  vec3ba_mic.h  vec3fa.h  vec3fa_mic.h  vec3ia.h  vec3ia_mic.h  vec4.h
Filtering/include/simd/: CMakeLists.txt  avx.h  avxb.h  avxf.h  avxi.h  avxi_emu.h  simd.h  smmintrin_emu.h  sse.h  sse_special.h  sseb.h  ssef.h  ssei.h
Filtering/include/sys/: CMakeLists.txt  alloc.cpp  alloc.h  array.h  atomic.h  barrier.cpp  barrier.h  condition.cpp  condition.h  event.h  filename.cpp  filename.h  intrinsics.h  library.cpp  library.h  mutex.cpp  mutex.h  network.cpp  network.h  platform.h  ref.h  regression.cpp  regression.h  string.cpp  string.h  sysinfo.cpp  sysinfo.h  thread.cpp  thread.h  vector.h  vector_t.h
Filtering/src/: Color.cpp  cpuFilter.cpp  cudaFilter.cpp  filtering.cpp  image.cpp
UserInterface/: CMakeLists.txt
UserInterface/include/: GLCanvas.h  MainFrame.h  Timer.h
UserInterface/src/: Slider.cpp  main.cpp
cg2_demo/: CG2_Demo.vcxproj  CG2_Demo.vcxproj.filters
cg2_demo/include/: ComboBox.h  Slider.h
cg2_demo/src/: ComboBox.cpp  GLCanvas.cpp  MainFrame.cpp
